Add lab_2 and lab_3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "stdio.h": "c",
-        "config.h": "c"
-    }
+        "config.h": "c",
+        "stdbool.h": "c"
+    },
+    "cmake.sourceDirectory": "/workspaces/OS_labs/lab1"
 }
