--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "OS_Lab_Container",
+    "name": "OS_Container",
     "dockerFile": "Dockerfile",
     "context": "..",
     "appPort": [],
